# RL_VKU

./: CLAUDE.md  README.md  implementation_plan.md  learning_guide.html  progress_log.md  pyproject.toml  session_handoff.md  task.md  theory_review.html  walkthrough.md
data/: output_evaluate.txt
data/logs/: dqn_sb3.csv  dqn_scratch_seed42_1780114813.csv  dqn_scratch_seed42_1780114897.csv  dueling_ddqn_scratch_seed42_1780130436.csv  dueling_dqn_sb3.csv  ppo_sb3.csv  ppo_scratch_seed42_1780200495.csv  ppo_scratch_seed42_1780200646.csv
data/logs/tb/DQN_1/: events.out.tfevents.1780111253.duckq1.39837.0
data/logs/tb/DQN_2/: events.out.tfevents.1780111521.duckq1.49211.0
data/logs/tb/DQN_3/: events.out.tfevents.1780111934.duckq1.65190.0
data/logs/tb/DQN_4/: events.out.tfevents.1780112261.duckq1.83616.0
data/logs/tb/DQN_5/: events.out.tfevents.1780113038.duckq1.118562.0
data/models/: ppo_scratch_best.pt  ppo_scratch_step_100000.pt  ppo_scratch_step_200000.pt  ppo_scratch_step_300000.pt  ppo_scratch_step_400000.pt  ppo_scratch_step_500000.pt
notebooks/: dqn_sb3.ipynb  dqn_scratch.ipynb  dueling_ddqn_scratch.ipynb  dueling_dqn_sb3.ipynb  ppo_sb3.ipynb  ppo_scratch.ipynb
scripts/: evaluate.py  run_sb3.py  run_scratch.py
src/: __init__.py
src/common/: __init__.py  utils.py  wrappers.py
src/sb3/: __init__.py  train.py
src/scratch/: __init__.py  agent.py  dqn_agent.py  dueling_ddqn_agent.py  models.py  ppo_agent.py  replay_buffer.py  test_imports.py  train.py
tests/: __init__.py  test_models.py  test_ppo.py  test_replay_buffer.py  test_wrappers.py
(+3 files in other folders)
