[project]
name = "pong-comparison"
version = "0.1.0"
description = "Atari Pong Reinforcement Learning Benchmark: Scratch PyTorch vs Stable-Baselines3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "gymnasium[atari]>=0.29.0",
    "autorom[accept-rom-license]>=0.6.1",
    "stable-baselines3[extra]>=2.1.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
    "moviepy>=1.0.3",
    "tensorboard>=2.13.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
